k8s/admin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "9090"
    spec:
      nodeSelector:
        env: dev   #changed propper labeling
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: admin-server
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: admin-server
          image: ross1832/spring-petclinic-admin-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
