k8s/discovery-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8761"
    spec:
      nodeSelector:
        env: dev
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: discovery-server
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: discovery-server
          image: ross1832/spring-petclinic-discovery-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "800m"
              memory: "1Gi"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 90
            timeoutSeconds: 15
            periodSeconds: 15
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 150
            timeoutSeconds: 10
            periodSeconds: 20
            failureThreshold: 3
