k8s/genai-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genai-service
  template:
    metadata:
      labels:
        app: genai-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8084"
    spec:
      nodeSelector:
        env: dev
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: genai-service
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: genai-service
          image: ross1832/spring-petclinic-genai-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "800m"
              memory: "1Gi"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 120
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 150
            timeoutSeconds: 20
            periodSeconds: 5
            failureThreshold: 3
