k8s/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-dev-ingress
  namespace: dev
spec:
  ingressClassName: nginx   # fixed
  rules:
    - host: HrdK-ore-Petclinic-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
